# ideas-playground

./: .gitignore  README.md
gacha-auto-clicker/: README.md  main.py  pyproject.toml
gradio-chat/: main.py  pyproject.toml
personal-resume-assistant/: .env.template  README.md  main.py  pyproject.toml
personal-resume-assistant/scripts/: download_data.sh
personal-resume-assistant/src/services/: llm_factory.py  llm_service.py  openai_provider.py  openllm_provider.py
personal-resume-assistant/src/utils/: pdf_handler.py
pyqt-code-generator/: README.md  app.py  pyproject.toml
vtube-studio-control-movement/: main.py  pyproject.toml  test-sound.py  vtuber-studio-api.py
