[project]
name = "gacha-auto-clicker"
version = "0.1.0"
description = ""
authors = [
    {name = "nguyennguyentruong",email = "nguyenntk.18@grad.uit.edu.vn"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyautogui (>=0.9.54,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
