[project]
name = "pyqt-code-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "nguyennguyentruong",email = "nguyenntk.18@grad.uit.edu.vn"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt6 (>=6.8.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
