[project]
name = "vtube-studio-control-movement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "configparser>=7.2.0",
    "gradio>=5.42.0",
    "openai>=1.99.9",
    "piper-tts[http]>=1.3.0",
    "pyttsx3>=2.99",
    "pyvts>=0.3.3",
    "requests>=2.32.4",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]
